# hStore

./: Makefile.am  README  autogen.sh  config.c  config.h  configure.ac  hstore.c  hstore.conf  hstore.h  hstore_plugins.c  log.c  log.h  test-POST.sh  test-ROOT.sh  util.c  util.h
tests/: test-ATOM.sh  test-DELETE.sh  test-GET.sh  test-PUT.sh
